--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ a {
 
 /* 3. Specific */
 .wallpaper {
-  background-image: url('../images/austria.jpg');
+  background-image: url('../images/code.jpg');
   background-position: center;
   background-size: cover;
   opacity: 0.2;
