--- a/layouts/index.html
+++ b/layouts/index.html
@@ -414,7 +414,7 @@
                 <input
                   type="email"
                   class="form-control"
-                  name="_replyto"
+                  name="replyto"
                   placeholder="Email"
                 />
               </div>
