--- a/layouts/partials/blog2.html
+++ b/layouts/partials/blog2.html
@@ -171,7 +171,7 @@
         </div>
 
         <script type="text/javascript">
-            var disqus_shortname = 'uicardio';
+            var disqus_shortname = 'pujanbajra';
 
             (function () {
                 var dsq = document.createElement('script');
